# IoT

./: .gitignore  CMakeLists.txt  README.md  SEP4_Greenhouse.atsln
GreenHouse_FreeRTOS_Test/: GreenHouse_FreeRTOS_Test.sln  GreenHouse_FreeRTOS_Test.vcxproj  GreenHouse_FreeRTOS_Test.vcxproj.filters  test.cpp
GreenHouse_FreeRTOS_Test/Debug/: GreenHouse_FreeRTOS_Test.exe.recipe  GreenHouse_FreeRTOS_Test.vcxproj.FileListAbsolute.txt
GreenHouse_FreeRTOS_Test/Debug/GreenHou.c7276dcd.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  GreenHouse_FreeRTOS_Test.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
GreenHouse_FreeRTOS_Test/FreeRTOS/: FreeRTOS_FFF_MocksDefinitions.cpp
Remote_GreenHouse_Monitoring_System/: Remote_GreenHouse_Monitoring_System.sln
Remote_GreenHouse_Monitoring_System/Remote_GreenHouse_Monitoring_System/: Remote_GreenHouse_Monitoring_System.vcxproj  Remote_GreenHouse_Monitoring_System.vcxproj.filters  tempHumSensor.c  tempHumSensor.h
Remote_GreenHouse_Monitoring_System/Remote_GreenHouse_Monitoring_System_Test/: Remote_GreenHouse_Monitoring_System_Test.vcxproj  tempHumSensorTest.cpp
SEP4_test/: Application.c  Application.h  ApplicationImpl.c  Configuration.c  Configuration.h  ConfigurationImpl.c  DownlinkHandler.c  DownlinkHandler.h  DownlinkHandlerImpl.c  FanController.c  FanController.h  FanControllerImpl.c  Initialize.c  Initialize.h  InitializeImpl.c  LoRaWANHandler.c  LoraUtils.h  PackageHandler.c  PackageHandler.h  PackageHandlerImpl.c  SEP4_Greenhouse.componentinfo.xml  SEP4_Greenhouse.cppproj  ServoController.h  ServoControllerImpl.c  UplinkHandler.c  UplinkHandler.h  UplinkHandlerImpl.c  actionsController.c  actionsController.h  application.c  configuration.c  downlinkHandler.c  initialize.c  main.c  packageHandler.c  servoController.c  servoController.h  uplinkHandler.c  windowController.c  windowController.h
SEP4_test/Debug/: Application.d  ConfigurationImpl.d  FanController.d  FanControllerImpl.d  LoRaWANHandler.d  Makefile  PackageHandler.d  PackageHandlerImpl.d  SEP4_Greenhouse.elf  SEP4_Greenhouse.hex  SEP4_Greenhouse.lss  SEP4_Greenhouse.map  SEP4_Greenhouse.srec  SEP4_test.elf  SEP4_test.lss  SEP4_test.map  SEP4_test.srec  main.d  makedep.mk
SEP4_test/DriverConnection/: CO2Sensor.c  CO2Sensor.h  TempHumSensor.c  TempHumSensor.h
SEP4_test/Release/: Makefile  makedep.mk
SEP4_test/Sensors/: CO2Sensor.c  CO2Sensor.h  TempHumSensor.c  TempHumSensor.h  lightSensor.c  lightSensor.h
SEP4_test/Testing/: Testing.sln
SEP4_test/drivers/: mh_z19.h
(+67 files in other folders)
